Feat Feito toda a parte de logica do token, trocas e transferencias.
