# docs/swagger.json
@@ -47,6 +47,52 @@
                 }
             }
         },
+        "/api/all-token": {
+            "get": {
+                "description": "Create a new user in db",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Token"
+                ],
+                "summary": "Get all Tokens",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "contract id",
+                        "name": "ContractId",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003ctoken\u003e",
+                        "description": "Token de autenticação (Colocar o token deixando o Bearer)",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "New User Created successfully",
+                        "schema": {
+                            "$ref": "#/definitions/inter.AllTokensOutput"
+                        }
+                    },
+                    "500": {
+                        "description": "Unable to store data in database",
+                        "schema": {
+                            "$ref": "#/definitions/erros.InternalServerError"
+                        }
+                    }
+                }
+            }
+        },
         "/api/contract": {
             "get": {
                 "description": "Pull a contract from blockchain",
@@ -134,6 +180,54 @@
                     },
                     "500": {
                         "description": "Error for make a new contract",
+                        "schema": {
+                            "$ref": "#/definitions/erros.InternalServerError"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/create-token": {
+            "post": {
+                "description": "Create a new user in db",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Token"
+                ],
+                "summary": "Make Tokens",
+                "parameters": [
+                    {
+                        "description": "Data for make a new token",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/inter.TokenCreateInput"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003ctoken\u003e",
+                        "description": "Token de autenticação (Colocar o token deixando o Bearer)",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "New Token Created successfully",
+                        "schema": {
+                            "$ref": "#/definitions/inter.TokenCreateOutput"
+                        }
+                    },
+                    "500": {
+                        "description": "Unable to created a new token",
                         "schema": {
                             "$ref": "#/definitions/erros.InternalServerError"
                         }
@@ -237,6 +331,201 @@
                 }
             }
         },
+        "/api/get-token": {
+            "get": {
+                "description": "Create a new user in db",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Token"
+                ],
+                "summary": "Get specify token",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "E-mail from user",
+                        "name": "ContractId",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Its a uri content in tokens",
+                        "name": "UriToken",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003ctoken\u003e",
+                        "description": "Token de autenticação (Colocar o token deixando o Bearer)",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "New User Created successfully",
+                        "schema": {
+                            "$ref": "#/definitions/inter.UserOutputController"
+                        }
+                    },
+                    "500": {
+                        "description": "Unable to store data in database",
+                        "schema": {
+                            "$ref": "#/definitions/erros.InternalServerError"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/loggout": {
+            "put": {
+                "description": "pull user and wallet for db",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Loggout User",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "E-mail from user",
+                        "name": "Email",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003ctoken\u003e",
+                        "description": "Token de autenticação (Colocar o token deixando o Bearer)",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "New User Created successfully",
+                        "schema": {
+                            "$ref": "#/definitions/inter.UserOutputController"
+                        }
+                    },
+                    "500": {
+                        "description": "Unable to store data in database",
+                        "schema": {
+                            "$ref": "#/definitions/erros.InternalServerError"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/make-trade": {
+            "post": {
+                "description": "Create a transfer from a user to a new token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Token"
+                ],
+                "summary": "Make a Trade",
+                "parameters": [
+                    {
+                        "description": "Data for make a new user",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/inter.Trade"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003ctoken\u003e",
+                        "description": "Token de autenticação (Colocar o token deixando o Bearer)",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "New User Created successfully",
+                        "schema": {
+                            "$ref": "#/definitions/inter.UserOutputController"
+                        }
+                    },
+                    "500": {
+                        "description": "Unable to store data in database",
+                        "schema": {
+                            "$ref": "#/definitions/erros.InternalServerError"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/make-transfer": {
+            "post": {
+                "description": "Create a transfer from a user to a user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Token"
+                ],
+                "summary": "Make a transfer",
+                "parameters": [
+                    {
+                        "description": "Data for make a new user",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/inter.Transaction"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003ctoken\u003e",
+                        "description": "Token de autenticação (Colocar o token deixando o Bearer)",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Transfer is by sucessfull",
+                        "schema": {
+                            "$ref": "#/definitions/inter.TransferOutput"
+                        }
+                    },
+                    "500": {
+                        "description": "Unable to store data in database",
+                        "schema": {
+                            "$ref": "#/definitions/erros.InternalServerError"
+                        }
+                    }
+                }
+            }
+        },
         "/api/user": {
             "get": {
                 "description": "pull user and wallet for db",
@@ -283,9 +572,47 @@
                 }
             }
         },
+        "/login": {
+            "put": {
+                "description": "Login user and give a acess token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Login User",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "E-mail from user",
+                        "name": "Email",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "token make:",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "User not found in db",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/token": {
             "get": {
-                "description": "Cria um toke para auth do usuario",
+                "description": "Creat a token for external apis",
                 "consumes": [
                     "application/json"
                 ],
@@ -295,7 +622,7 @@
                 "tags": [
                     "Auth"
                 ],
-                "summary": "Criar token de auth",
+                "summary": "Creat a token for apis",
                 "responses": {
                     "200": {
                         "description": "token make:",
@@ -362,6 +689,17 @@
                 }
             }
         },
+        "inter.AllTokensOutput": {
+            "type": "object",
+            "properties": {
+                "tokens": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/inter.TokenCreateOutput"
+                    }
+                }
+            }
+        },
         "inter.ContractController": {
             "type": "object",
             "properties": {
@@ -421,6 +759,150 @@
             "type": "object",
             "properties": {
                 "contractId": {
+                    "type": "string"
+                }
+            }
+        },
+        "inter.TokenCreateInput": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "imageUrl": {
+                    "type": "string"
+                },
+                "maxSupply": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "traits": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "inter.TokenCreateOutput": {
+            "type": "object",
+            "properties": {
+                "contractId": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "currentSupply": {
+                    "type": "integer"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "imageUrl": {
+                    "type": "string"
+                },
+                "maxSupply": {
+                    "type": "integer"
+                },
+                "metadataUrl": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "traits": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
+                },
+                "updatedAt": {
+                    "type": "string"
+                },
+                "uriNumber": {
+                    "type": "integer"
+                }
+            }
+        },
+        "inter.Trade": {
+            "type": "object",
+            "properties": {
+                "transaction1": {
+                    "$ref": "#/definitions/inter.Transaction"
+                },
+                "transaction2": {
+                    "$ref": "#/definitions/inter.Transaction"
+                }
+            }
+        },
+        "inter.Transaction": {
+            "type": "object",
+            "properties": {
+                "contractId": {
+                    "type": "string"
+                },
+                "from": {
+                    "type": "string"
+                },
+                "to": {
+                    "type": "string"
+                },
+                "tokenId": {
+                    "type": "string"
+                }
+            }
+        },
+        "inter.TransferOutput": {
+            "type": "object",
+            "properties": {
+                "completedAt": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "request": {
+                    "type": "object",
+                    "properties": {
+                        "contractId": {
+                            "type": "string"
+                        },
+                        "from": {
+                            "type": "string"
+                        },
+                        "quantity": {
+                            "type": "integer"
+                        },
+                        "to": {
+                            "type": "string"
+                        }
+                    }
+                },
+                "result": {
+                    "type": "object"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "transactionHash": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                },
+                "walletId": {
                     "type": "string"
                 }
             }
